--- a/index.html
+++ b/index.html
@@ -1,298 +1,126 @@
-<!DOCTYPE html>
-<html lang="zh-tW">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="CHIA-JUI YEH">
-    <link rel="icon" href="">
+﻿<!DOCTYPE html>
+<html>
+<head>
+	<title>NEtworking and Mobile Systems (NEMS) Lab - 網路和行動系統實驗室</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://maps.googleapis.com/maps/api/js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfVkOFCpB0JlbH9GmpvuOpnDLglUv0ZAc&callback=initMap"
+  type="text/javascript"></script>
+	<script src="js/jquery.1.12.4.min.js"></script>
+	<link rel="stylesheet" href="css/w3.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/layout.css">
+	<style>
+		.mySlides {display:none}
+		.w3-left, .w3-right, .w3-badge {cursor:pointer}
+		.w3-badge {height:13px;width:13px;padding:0}
+	</style>
+</head>
 
-    <title>NEtworking and Mobile Systems Lab</title>
+<body>
+<!--Header / load from common.html -->
+<div id="header"></div>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.min.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+<!-- main-content 本頁內容開始 -->
+<div id="main-content" class="w3-container w3-content">
+	<!--大圖輪播-->
+	<div class="w3-content w3-display-container w3-margin-top" style="width: 100%">
+	  <img class="mySlides" src="img/img_nature_wide.jpg" style="width:100%">
+	  <img class="mySlides" src="img/img_fjords_wide.jpg" style="width:100%">
+	  <img class="mySlides" src="img/img_mountains_wide.jpg" style="width:100%">
+	  <!--大圖輪播介面-->
+	  <div class="w3-center w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+		<div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+		<div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+	  </div>
+	</div>
+	<div id="about-nems"  class="w3-padding-top w3-padding-bottom">
+		<h2 class="w3-padding">NEMS Lab</h2>
+		<p>The lab for NEtworking and Mobile Systems (NEMS) is affiliated with the Department of Computer Science at NCTU. 
+			It is located at MIRC (電子資訊大樓) Room 704. Our research proceeds from network fundamentals to other disciplines. We aim to pursue customizable, flexible 
+			solutions for networking services, as well as to explore security issues and to design countermeasures in mobile systems.
+			Our projects span four directions: Wireless networking: WiGig, Wi-Fi; Network mobility: IPv6 NEMO, wireless mobility;
+			Mobile network: 4G/5G security, service performance; Network and system security: SDN security, wireless security, Android security.</p>
+		</div>
+	<div id="nems-news"  class="w3-padding-top w3-padding-bottom">
+		<h2>NEMS lab News</h2>
+			<h3>Recruiting</h3>
+			<ol>
+				<p><font color="#EE0000">*** One master student position (2017) is still open. ***</font></p>
+				<p>We are looking for a master/Phd research assistant (Full-time MOST Research Assistant). People who plan to study aboard are very welcome. 
+					The employment period is quite flexible (Negotiable).</p>
+				<p>We are looking for <strong>self-motivated</strong> students (including undergraduate, master, and phd) who want to work on 
+					interesting problems in the areas of networking and mobile systems. The potential students are expected to be 
+					willing <strong>to learn</strong>, <strong>to explore</strong>, and <strong>to code</strong>. 
+					If you are interested in joining us, you are very welcome to drop by our lab to chat with us. </p>
+			</ol>
+			<h3>Milestones</h3>
+			<ol>
+				<li>Sep. 2016: NEMS Lab (@ MIRC Room 704) is launched.</li>
+			</ol>
+			<h3>Press Coverage</h3>
+			<ol>
+			</ol>
+			<h3>Alumni News</h3>
+			<ol>
+				<li>Aug. 2017: Our research assistant (Wei-Han Chen) leaves for studying aboard in Computer Science at OSU.</li>
+			</ol>
+  	</div>
+</div>
 
-    <!-- Navigate -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <img class="img-responsive" src="" alt="">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="">NEtworking and Mobile Systems Lab</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#members">Members</a></li>
-            <li><a href="#projects">Projects</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </head>
+<!-- Footer-->
+<div id="footer">
+		<footer class="w3-light-gray w3-padding-top-16">
+		<div class="w3-content w3-container">
+		  <div class="w3-row w3-section">
+			<div class="w3-col m7 s12 w3-container">
+			  <!-- Add Google Maps -->
+			  <div id="googleMap" class="w3-round-large" style="width:100%;height:200px;"></div>
+			</div>
+			<div class="w3-col m5 s12 w3-container w3-section w3-medium">
+				<div class="w3-margin-bottom">
+					<i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> 300新竹市大學路1001號 電子資訊大樓704<br>
+					<i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +886 (03)5759290<br>
+					<i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: noname19930930 at gmail.com<br>
+				</div>
+			</div>
+			
+		  </div>
+		</div>
+		<div class="w3-container w3-blue w3-dark-gray w3-medium">
+			<div>© 2016 NEtworking and Mobile Systems Lab NCTU</div>
+		</div>
+	</footer>
+</div>
+<!-- Scripts -->
+<script src="js/common.js"></script>
+<script type="text/javascript">
+//Google map
+<!-- Google Map Location -->
+var myCenter = new google.maps.LatLng(24.7867784,120.9952533);
 
-  <body>
-    <!-- About -->
-    <section class="page">
-      <div class="container">
-  		  <div class="jumbotron">
-          <p>The lab for NEtworking and Mobile Systems (NEMS) is affiliated with the Department of Computer Science
-          at NCTU. We start from network fundamentals to other disciplines. Our objective is to pursue customizable, flexible solutions for networking services,
-          as well as to explore security issues and to build the countermeasures in mobile systems.</p>
-          <small></small>
-  		  </div>
-      </div>
-    </section>
+function initialize() {
+var mapProp = {
+  center: myCenter,
+  zoom: 15,
+  scrollwheel: true,
+  draggable: true,
+  mapTypeId: google.maps.MapTypeId.ROADMAP
+  };
 
-    <!-- News -->
-    <section id="news" class="page">
-      <div class="container">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <h1>Recruiting</h1>
-          <blockquote>
-            <p>
-              We are inviting all the students (including undergraduate, master, and Phd) who want to work on interesting problems in the areas of networking and mobile systems, to join our lab. 
-              The potential students are welcome to come for a chat with us.
-            </p>
-            <p><strong>We are located at 電子資訊大樓 R704.</strong></p>
-            <p><i class="fa fa-phone" aria-hidden="true"></i> 03-5712121 #59290</p>
-            <small>NEtworking and Mobile Systems Lab</small>
-          </blockquote>
-        </div>
-    </section>
+var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
-    <!-- Members -->
-    <section id="members" class="page">
-      <div class="container">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <h1>Members</h1>
-          <!-- Advisor -->
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Advisor</h2>
-            <div class="col-md-12">
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/chiyuli.jpg" class="img-responsive img-circle img-center">
-                <h4>Chi-Yu Li</h4>
-                <h4>李奇育</h4>
-                <h3>
-                  <a href="http://people.cs.nctu.edu.tw/~chiyuli/">
-                    <i class="fa fa-link" aria-hidden="true"></i>
-                  </a>
-                  <a href="mailto:chiyuli@cs.nctu.edu.tw">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                  <a href="https://scholar.google.com.tw/citations?user=OtMUXigAAAAJ&hl=en">
-                    <i class="fa fa-google" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-            </div>
-          </div>
-          <!-- Assistant -->
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Assistant</h2>
-            <div class="col-md-12">
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/alex.jpg" class="img-responsive img-circle img-center">
-                <h4>Wei-Han Chen</h4>
-                <h4>陳暐翰</h4>
-                <h3>
-                  <a href="mailto:alex81527@gmail.com">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-            </div>
-          </div>
-          <!-- Master -->
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Master Students</h2>
-            <!-- 106 -->
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <h3>106</h3>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/106/csyuanc.jpg" class="img-responsive img-circle img-center">
-                <h4>Syuan-Cheng Chen</h4>
-                <h4>陳軒丞</h4>
-                <h3>
-                  <a href="mailto:csyuanc.cs06g@g2.nctu.edu.tw">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/106/yuhanlu.jpg" class="img-responsive img-circle img-center">
-                <h4>Yu-Han Lu</h4>
-                <h4>呂昱翰</h4>
-                <h3>
-                  <a href="mailto:yuhanlu.cs02@g2.nctu.edu.tw">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/male.jpg" class="img-responsive img-circle img-center">
-                <h4>Louie Lu</h4>
-                <h4>呂紹榕</h4>
-                <h3>
-                </h3>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/male.jpg" class="img-responsive img-circle img-center">
-                <h4>Pei-Yuan Hong</h4>
-                <h4>洪培元</h4>
-                <h3>
-                  <a href="mailto:hp5xio@gmail.com">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-            </div>
-            <!-- 105 -->
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <h3>105</h3>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/105/cjyeh.jpg" class="img-responsive img-circle img-center">
-                <h4>Chia-Jui Yeh</h4>
-                <h4>葉家睿</h4>
-                <h3>
-                  <a href="http://cjyeh.me">
-                    <i class="fa fa-link" aria-hidden="true"></i>
-                  </a>
-                  <a href="mailto:cjyeh@cs.nctu.edu.tw">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                  <a href="https://tw.linkedin.com/in/noname0930">
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/105/yylee.jpg" class="img-responsive img-circle img-center">
-                <h4>Yao-Yu Li</h4>
-                <h4>李曜宇</h4>
-                <h3>
-                  <a href="mailto:forever3580ya@gmail.com">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/105/gio.jpg" class="img-responsive img-circle img-center">
-                <h4>Giovanni Salinas</h4>
-                <h4>羅吉凡</h4>
-                <h3>
-                  <a href="mailto:gsalinaslopez.eic05g@nctu.edu.tw">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-            </div>
-            <!-- 104 -->
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <h3>104</h3>
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center">
-                <img src="images/master/104/jamie.jpg" class="img-responsive img-circle img-center">
-                <h4>Chien-Ting Kuo</h4>
-                <h4>郭建廷</h4>
-                <h3>
-                  <a href="mailto:jamie820103@gmail.com">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                  </a>
-                  <a href="https://www.linkedin.com/in/jamie-kuo-8a73148b">
-                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                  </a>
-                </h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+var marker = new google.maps.Marker({
+  position: myCenter,
+});
 
-    <!-- Projects -->
-    <section id="projects" class="page">
-      <div class="container">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <h1>Projects</h1>
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Customizable WiFi</h2>
-            <div class="col-md-5">
-              <blockquote>
-              <img src="images/project_wifi.jpg" class="img-responsive img-center" />
-              </blockquote>
-            </div>
-            <div class="col-md-7">
-              <p style="font-size:24px">As the Wi-Fi technology becomes pervasive in reality, its usage pattern is also turning highly
-                diversified in operation settings and application scenarios. This leads to new design
-                requirements for Wi-Fi networking solutions in terms of various combinations in throughput, latency and energy efficiency.
-                We believe that
-                both the user demand pull and the technology push call for customizable Wi-Fi solutions.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Mobile Security</h2>
-            <div class="col-md-5">
-              <blockquote>
-              <img src="images/project_security.jpg" class="img-responsive img-center" />
-              </blockquote>
-          	</div>
-            <div class="col-md-7">
-            	<p style="font-size:24px">To support various advanced services, the mobile Internet technology is evolving
-            		from a simple, working design to a resilient, high-performance networking solution suite.
-            	       For example, during the evolution from 2G/3G to 4G, the security impact is not fully understood.
-            		My research shows that unprecedented malicious attacks can be launched on both mobile devices and
-            		the network infrastructure in 3G/4G systems. It is because security loopholes usually lie in the newly offered
-            		services (e.g., IoT and D2D) or those legacy ones (e.g., VoLTE) that require new interactions.
-            	</p>
-            </div>
-          </div>
-          <div class="col-md-12 col-sm-12 col-xs-12">
-            <h2>Software Defined Networking</h2>
-            <div class="col-md-5">
-              <blockquote>
-                <img src="images/project_sdn.jpg" class="img-responsive img-center" />
-            	</blockquote>
-            </div>
-            <div class="col-md-7">
-            	<p style="font-size:24px">To support several new technologies (e.g., IoT, D2D,
-            		Multi-RAT, etc.), the future 5G network architecture requires to achieve various goals: high throughput, low delays,
-            		massive connectivity, resilience, security, to name a few. It thus needs to be flexible enough to dynamically meet
-            		requirements of different technologies. Software-Defined Networking (SDN) can be a holistic solution to such
-            		flexibility.
-            	</p>
-            </div>
-          </div>
-      </div>
-    </section>
+marker.setMap(map);
+}
 
-    <footer id="footer">
-      <div class="container">
-        <div class="col-md-12 text-center">
-          <p class="copyright">
-            Copyright © 2016 NEtworking and Mobile Systems Lab All Rights Reserved.
-          </p>
-          <p>
-            Create by <a href="http://noname0930.github.io">Chia-Jui Yeh</a>
-          </p>
-        </div>
-        </div>
-      </div>
-    </footer>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+</body>
 </html>
